--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "grunt": "~0.4.0",
     "coffee-script": "~1.6.3",
     "vows": "~0.7.0",
-    "node-xlsx": "~0.2.2"
+    "excel-parser": "~0.2.1"
   },
   "dependencies": {
     "lodash": "~ 1.3.0",
