--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   ],
   "main": "lib/index.js",
   "engines": {
-    "node": ">= 0.8.0"
+    "node": "~ 0.8.0"
   },
   "scripts": {},
   "devDependencies": {
@@ -40,10 +40,10 @@
   },
   "dependencies": {
     "lodash": "~ 1.3.0",
-    "zipstream": "~ 0.2.1",
     "through": "~ 2.3.4",
     "async": "~ 0.2.8",
-    "duplexer": "~ 0.1.1"
+    "duplexer": "~ 0.1.1",
+    "archiver": "~0.4.10"
   },
   "keywords": [
     "xlsx",
